--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "bootstrap": "^5.2.3",
+    "leaflet": "^1.9.3",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1"
   }
 }
