--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@mui/x-data-grid": "^6.2.1",
+    "@mui/x-data-grid-generator": "^6.2.1",
     "bootstrap": "^5.2.3",
     "leaflet": "^1.9.3",
     "next": "13.3.0",
