--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/material": "^5.12.0",
     "@mui/x-data-grid": "^6.2.1",
     "@mui/x-data-grid-generator": "^6.2.1",
+    "@mui/x-date-pickers": "^6.3.1",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
     "leaflet": "^1.9.3",
     "next": "13.3.0",
     "react": "18.2.0",
