--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mui/x-data-grid": "^6.2.1",
     "@mui/x-data-grid-generator": "^6.2.1",
     "@mui/x-date-pickers": "^6.3.1",
+    "@supabase/auth-helpers-nextjs": "^0.6.1",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/supabase-js": "^2.21.0",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "leaflet": "^1.9.3",
@@ -25,6 +28,11 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "server-only": "^0.0.1",
+    "swr": "^2.1.5"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
