--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
     "server-only": "^0.0.1",
+    "sharp": "^0.32.1",
     "swr": "^2.1.5",
     "uuid": "^9.0.0"
   },
