--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^6.2.1",
     "@mui/x-data-grid-generator": "^6.2.1",
     "@mui/x-date-pickers": "^6.3.1",
+    "@next/font": "^13.4.3",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.21.0",
